--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.sdu</groupId>
-    <artifactId>pay-backend</artifactId>
+    <artifactId>alipay-demo</artifactId>
     <version>1.0</version>
-    <name>pay-backend</name>
-    <description>pay-backend</description>
+    <name>alipay-demo</name>
+    <description>alipay-demo</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -23,11 +23,17 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
 
-        <!--支付宝sdk-->
         <dependency>
             <groupId>com.alipay.sdk</groupId>
             <artifactId>alipay-sdk-java</artifactId>
@@ -44,5 +50,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
